--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,3 +61,7 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.jq.demo.mass
+bPackageDataInsideApk=True
+
