--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,4 +21,5 @@ MetaDataTagsForAssetRegistry=()
 [/Script/MassBoidsGame.BoidsSettings]
 boids.Cohesion=0.500000
 boids.Alignment=0.500000
+boids.TurnBackRate=1.00000
 
