--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,5 +21,6 @@ MetaDataTagsForAssetRegistry=()
 [/Script/MassBoidsGame.BoidsSettings]
 boids.Cohesion=0.500000
 boids.Alignment=0.500000
-boids.TurnBackRate=1.00000
-
+boids.TurnBackRate=0.500000
+boids.TurnBackOffset=1500
+boids.Extent=1600
