--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_13
+FrameRateLock=PUFRL_None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -64,4 +65,5 @@ SoundCueCookQualityIndex=-1
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.jq.demo.mass
 bPackageDataInsideApk=True
+TargetSDKVersion=26
 
