--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/StarterMap
-EditorStartupMap=/Game/StarterContent/Maps/StarterMap
+GameDefaultMap=/Game/ECS.ECS
+EditorStartupMap=/Game/ECS.ECS
 GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
